[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/ui/elements/EmailField.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/ui/elements/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/ui/elements/PasswordField.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/main_menu.theme" type="Theme" id=4]
[ext_resource path="res://assets/fonts/info_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://src/MainMenu/RegisterForm.gd" type="Script" id=6]
[ext_resource path="res://src/ui/elements/StatusPanel.tscn" type="PackedScene" id=7]

[node name="RegisterForm" type="VBoxContainer"]
visible = false
margin_left = 440.0
margin_top = 346.0
margin_right = 840.0
margin_bottom = 374.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 400, 0 )
theme = ExtResource( 4 )
custom_constants/separation = 0
script = ExtResource( 6 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 400.0
margin_bottom = 313.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 393.0
margin_bottom = 306.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 376.0
margin_bottom = 289.0
custom_constants/separation = 10

[node name="Email" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 1 )]

[node name="Password" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]

[node name="RepeatPassword" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 136.0
margin_bottom = 194.0

[node name="RegisterButton" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 204.0
margin_right = 366.0
margin_bottom = 254.0
text = "Register"

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 264.0
margin_right = 366.0
margin_bottom = 279.0

[node name="LoginButton" type="LinkButton" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 80.0
margin_right = 285.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 5 )
text = "Already have an account? Log in here."

[node name="StatusPanel" parent="." instance=ExtResource( 7 )]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
